@@ -20,7 +20,7 @@ table.form-table th {
     width:40%;
     font-weight:bold;
 }
-span.recommendation {
+.recommendation {
     font-size: 10px;
     font-weight:normal;
     color:#222;
